<resources>
    <string name="app_name">daMatch</string>
    <string name="find_damatch_title">FIND DAMATCH</string>
    <string name="find_da_match_card_description">find da match card</string>
    <string name="skip_button">Skip</string>
    <string name="developers">by\n Cameron, Cyrus, Eric, John</string>
    <string name="magnifying_glass_description">magnifying_glass</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="tap_to_play">Tap Draw Card to Begin</string>
    <string name="remaining_cards">Remaining Cards: %1$d</string>
    <string name="score">%1$.2f points</string>
    <string name="deck_theme">Theme: %1$s</string>
    <string name="saved_value">Saved Value: %1$s</string>
    <string name="clicked_toast">Clicked %1$s</string>
    <string name="remaining_cards_description">Remaining Cards: 0</string>
    <string name="back_button">Back</string>
    <string name="back_of_card_description">back of card</string>
    <string name="back_of_discard_pile_description">back of discard pile</string>
    <string name="menu_title">MENU</string>
    <string name="settings_button_img_description">settings_button_img</string>
    <string name="play_btn_img_description">play_btn_img</string>
    <string name="help_btn_img_description">help_btn_img</string>
    <string name="hotdog_img_description">hotdog_img</string>
    <string name="apple_img_description">apple_img</string>
    <string name="baseball_description">baseball</string>
    <string name="citations"><a href="https://docs.google.com/document/d/1YH_DIlo6li35TPZp5tk3KtZGlBYKpQlwhnIc7iARZJg/edit?usp=sharing">Citations</a></string>

    <string name="title_activity_help_screen">title_activity_help_screen</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="discard">Discard</string>
    <string name="look_for_the_matching_item_n_in_both_pile">Look for the matching item\n in both pile</string>
    <string name="click_on_the_item_on_the_draw_pile_that_has_a_match">Click on the item on the draw pile that has a match.</string>
    <string name="the_game_is_timed_find_damatch_as_fast_as_you_can">The game is timed. Find DaMatch as fast as you can!</string>
    <string name="draw">Draw</string>
    <string name="card">card</string>
    <string name="back_button_description">back button</string>
    <string name="step_one_description">step one</string>
    <string name="step_two_description">step two</string>
    <string name="step_three_description">step three</string>
    <string name="alarm_clock_description">alarm clock</string>
    <string name="finger_description">finger</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="new_high_score">New High Score!</string>
    <string name="trophy_description">Trophy</string>
    <string name="discard_pile">Discard Pile</string>
    <string name="draw_pile">Draw Pile</string>
    <string name="settings">SETTINGS</string>
    <string name="deck_front">deck_front</string>
    <string name="card_image">card image</string>
    <string name="help_button_description">Help button</string>
    <string name="leaderboard_button_description">leaderboard button</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="reset_scores_button_description">reset scores button</string>
    <string name="card_order">Order - %1$d</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="order_2_12_points_second">Order 2: 12 points / second</string>
    <string name="order_5_1_points_second">Order 5: 1 points / second</string>
    <string name="scoring_guide">Scoring Guide</string>
    <string name="words_game_mode_total_score_2">Words Game Mode: Total score / 2</string>
    <string name="the_lower_the_score_the_better">The Lower the Score the Better!</string>
    <string name="order_3_4_points_second">Order 3: 4 points / second</string>
    <string name="leaderboard_points">%1$s points</string>
    <string name="from_this_total_we_multiply_by_the_score_factor_to_get_your_total_score">From this total, we multiply by the \'Score Factor\' to get your Total Score</string>
    <string name="score_factor_max_number_of_cards_number_nof_cards_played_with">Score Factor = sqrt(Max Number of Cards - Number of Cards Played With)</string>
    <string name="flickr">Flickr</string>
    <string name="sel_card_type">Select Card Type</string>
    <string name="sel_order">Select Card Order</string>
    <string name="sel_pile_size">Select Draw Pile Size</string>
    <string name="sel_game_mode">Select Game Mode</string>
    <string name="flickr_button">flickr button</string>
    <string name="draw_pile_cards">"%1$s Cards"</string>
    <string name="need_more_images">"Add more Flickr images!"</string>
    <string name="sel_levels">Select Level:</string>
    <string name="remove">Remove</string>
    <string name="custom_image">Custom Image</string>
    <string name="custom">custom button</string>
    <string name="download">download cards</string>
</resources>