<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoringGuide" >

    <TextView
        android:id="@+id/txt_scoring_guide_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/vera_bold"
        android:gravity="center"
        android:text="@string/scoring_guide"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_scoring_order2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:text="@string/order_2_12_points_second"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_scoring_order3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="88dp"
        android:text="@string/order_3_4_points_second"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_scoring_order5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="0dp"
        android:text="@string/order_5_1_points_second"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_scoring_words_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="264dp"
        android:text="@string/words_game_mode_total_score_2"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_objective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/the_lower_the_score_the_better"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_score_factor_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:text="@string/from_this_total_we_multiply_by_the_score_factor_to_get_your_total_score"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_score_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:text="@string/score_factor_max_number_of_cards_number_nof_cards_played_with"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

</RelativeLayout>