<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/vera_bold"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="timer text" />

    <fragment
        android:id="@+id/fragment_draw_card"
        android:name="com.example.damatch.DrawCardFragment"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <ImageButton
        android:id="@+id/draw_card_back"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/deck_back"
        android:contentDescription="@string/back_of_card_description"
        android:cropToPadding="true"
        android:padding="0dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/deck_back" />

    <TextView
        android:id="@+id/txt_remaining_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/vera_bold"
        android:text="@string/remaining_cards_description"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragment_discard"
        android:name="com.example.damatch.DiscardFragment"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_discard_pile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/discard_pile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fragment_discard"
        app:layout_constraintStart_toStartOf="@+id/fragment_discard"
        app:layout_constraintTop_toBottomOf="@+id/fragment_discard" />

    <TextView
        android:id="@+id/txt_draw_pile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/draw_pile"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/fragment_draw_card"
        app:layout_constraintStart_toStartOf="@+id/fragment_draw_card"
        app:layout_constraintTop_toBottomOf="@+id/fragment_draw_card" />

    <ImageButton
        android:id="@+id/backBtnn"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />


</androidx.constraintlayout.widget.ConstraintLayout>