<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaderBoardActivity">

    <WebView
        android:id="@+id/boardBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/scoresList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_help_pink" />

    <TextView
        android:id="@+id/txt_title_help_pink"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:fontFamily="@font/vera_bold"
        android:gravity="center"
        android:text="@string/high_scores"
        android:textColor="#E5469D"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/txt_title_help_blue"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:fontFamily="@font/vera_bold"
        android:gravity="center"
        android:text="@string/high_scores"
        android:textColor="#51D4DE"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <TextView
        android:id="@+id/txt_title_help_black"
        android:layout_width="300dp"
        android:layout_height="86dp"
        android:fontFamily="@font/vera_bold"
        android:gravity="center"
        android:text="@string/high_scores"
        android:textColor="#171C21"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.11" />

    <ImageButton
        android:id="@+id/resetButton"
        android:layout_width="131dp"
        android:layout_height="70dp"
        android:contentDescription="@string/reset_scores_button_description"
        android:scaleType="fitCenter"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/reset_scores_button" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="131dp"
        android:layout_height="70dp"
        android:contentDescription="@string/back_button_description"
        android:scaleType="fitCenter"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        app:srcCompat="@drawable/back_button" />

</androidx.constraintlayout.widget.ConstraintLayout>